# my-game-engine

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: fragment.glsl  vertex.glsl
include/engine/core/: Engine.h  PlayerController.h
include/engine/math/: Math.h
include/engine/render/: Shader.h
src/: CMakeLists.txt
src/engine/core/: Engine.cpp  PlayerController.cpp  main.cpp
src/engine/math/: Math.cpp
src/engine/render/: Shader.cpp
